--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f0f2f5;
   margin: 0;
-  padding: 0 ;
+  padding: 0;
 }
 
 .Main-Container {
@@ -12,6 +12,7 @@ body {
   border-radius: 5px;
   background-color: rgb(213, 224, 224);
   display: flex;
+  flex-wrap: wrap; 
 }
 
 h1 {
@@ -37,15 +38,22 @@ select {
 }
 
 .currentDay {
-  width: 45%;
+  width: calc(50% - 20px); 
+  margin-right: 20px;
   padding: 0 20px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
 }
 
 .forecast {
-  width: 50%;
+  width: 50%; 
   padding: 0 20px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
 }
 
 .currentDay h2,
@@ -56,23 +64,31 @@ select {
 
 .currentDay p,
 .forecast p {
-  text-align: center;
+  text-align: left;
 }
 
-.forecast-item {
+.weather-card,
+.forecast-card {
+  flex: 1; 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 10px;
-  border-radius: 5px;
-  border: 2px solid green;
-  margin-bottom: 5px;
-  width: 100%;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 2px 5px rgba(12, 12, 12, 0.1);
+  margin-bottom: 10px;
 }
 
-.forecast-item:last-child {
-  margin-bottom: 0;
+.forecast-cards {
+
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: flex-start; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  gap: 10px;
+
 }
 
 strong {
@@ -83,18 +99,6 @@ strong {
   font-size: 1.2em;
   margin-right: 10px;
   position: relative;
-  margin-left: 30px
 }
 
-strong:before {
-  content: "";
-  display: block;
-  width: 20px;
-  height: 20px;
-  background-color: green;
-  border-radius: 50%;
-  position: absolute;
-  left: -30px;
-  top: 50%;
-  transform: translateY(-50%);
-}
+
